m42xq: m42xq <- a42xq

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -29,6 +29,12 @@ import /init.recovery.qcom_decrypt.rc
 
 on init
     setprop prepdecrypt.loglevel 2
+    write /sys/class/backlight/panel0-backlight/brightness 200
+    setprop sys.usb.configfs 1
+
+on property:ro.boot.usbcontroller=*
+    setprop sys.usb.controller ${ro.boot.usbcontroller}
+    write /sys/class/udc/${ro.boot.usbcontroller}/device/../mode peripheral
 
 on fs
     # Force ANDROID_ROOT to /system_root
